[project]
name = "loukarver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.9",
    "tzdata",
    "httpx>=0.28.1",
]
